[package]
name = "lingxia-browser"
version.workspace = true
edition.workspace = true
description = "Browser runtime capability crate for LingXia"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/LingXia-Dev/LingXia"
documentation = "https://docs.rs/lingxia-browser"
repository = "https://github.com/LingXia-Dev/LingXia"
keywords = ["lingxia", "browser", "lxapp", "webview"]
categories = ["web-programming", "api-bindings"]

[dependencies]
lxapp = { workspace = true }
lingxia-log = { workspace = true }
lingxia-transfer = { workspace = true }
lingxia-settings = { workspace = true }
lingxia-platform = { workspace = true }
lingxia-webview = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }
rong = { workspace = true, default-features = false }
uuid = { version = "1.20", features = ["v4"] }
