[package]
name = "lingxia-devtool-protocol"
version.workspace = true
edition.workspace = true
description = "Devtool wire protocol types for LingXia tools"
license = "MIT"
repository = "https://github.com/LingXia-Dev/LingXia"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
