[package]
name = "lingxia-devtool-protocol"
version.workspace = true
edition.workspace = true
description = "Devtool wire protocol types for LingXia tools"
license = "MIT"
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
interprocess = { version = "2", optional = true }

[features]
# Per-user dev-session broker (local IPC). Only the CLI binaries enable this;
# the app runtime consumes the wire types without pulling in interprocess.
broker = ["dep:interprocess"]
