[package]
name = "lingxia-devtool"
version.workspace = true
edition.workspace = true
description = "Devtool runtime bridge and protocol helpers for LingXia apps"
license = "MIT"
repository.workspace = true

[features]
default = []
browser = ["dep:lingxia-browser"]

[dependencies]
lingxia-devtool-protocol = { workspace = true }
lingxia = { workspace = true, default-features = false, features = ["devtool"] }
lingxia-app-context = { workspace = true }
lingxia-browser = { workspace = true, optional = true }
lingxia-log = { workspace = true }
lxapp = { workspace = true, default-features = false }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tungstenite = { version = "0.29", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }

[target.'cfg(any(target_os = "android", target_os = "ios", all(target_os = "linux", target_env = "ohos")))'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios", all(target_os = "linux", target_env = "ohos"))))'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
