[package]
name = "lingxia-gen"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
Inflector = "0.11"
svg2pdf = "0.13"
roxmltree = "0.21"
jsonschema = "0.42"

[dev-dependencies]
tempfile = "3.25"
