[package]
name = "lingxia-macro"
version.workspace = true
edition.workspace = true
description = "Procedural macros for LingXia host extensions"
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
