[package]
name = "lingxia-log"
version.workspace = true
edition.workspace = true
description = "LingXia structured logging domain and in-memory log pipeline primitives"
license = "MIT"
repository.workspace = true

[dependencies]
lingxia-provider = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
