[package]
name = "lingxia-logic"
version.workspace = true
edition.workspace = true
description = "JavaScript runtime for LingXia lightweight application"
license = "MIT"
repository.workspace = true
keywords = ["lingxia", "javascript", "runtime"]
categories = ["web-programming", "api-bindings"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
lxapp = { workspace = true, default-features = false, features = ["standard"] }
lingxia-service = { workspace = true }
lingxia-transfer = { workspace = true }
lingxia-media = { workspace = true }
lingxia-app-context = { workspace = true }
lingxia-platform = { workspace = true }
lingxia-surface = { workspace = true }
lingxia-shell = { workspace = true }
lingxia-messaging = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
uuid = { version = "1.20", features = ["v4"] }
rong_modules = { workspace = true, default-features = false, features = ["timer", "http", "encoding", "event", "exception", "abort", "console", "url", "buffer", "stream"] }
rong_event = { workspace = true }
rong_rt = { workspace = true }
rong_storage = { workspace = true }

# Target-specific JavaScript engine selection
# Apple platforms use JavaScriptCore.
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
rong = { workspace = true, features = ["jscore"] }
rong_modules = { workspace = true, default-features = false, features = ["jscore"] }

# Android currently uses QuickJS.
[target.'cfg(target_os = "android")'.dependencies]
rong = { workspace = true, features = ["quickjs"] }
rong_modules = { workspace = true, default-features = false, features = ["quickjs"] }

# HarmonyOS uses ArkJS.
[target.'cfg(all(target_os = "linux", target_env = "ohos"))'.dependencies]
rong = { workspace = true, features = ["arkjs"] }
rong_modules = { workspace = true, default-features = false, features = ["arkjs"] }

# Fallback for other targets.
[target.'cfg(not(any(target_os = "ios", target_os = "macos", target_os = "android", all(target_os = "linux", target_env = "ohos"))))'.dependencies]
rong = { workspace = true, features = ["quickjs"] }
rong_modules = { workspace = true, default-features = false, features = ["quickjs"] }

[target.'cfg(any(target_os = "android", target_os = "ios", all(target_os = "linux", target_env = "ohos")))'.dependencies]
rong_modules = { workspace = true, default-features = false, features = ["tls-ring"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios", all(target_os = "linux", target_env = "ohos"))))'.dependencies]
rong_modules = { workspace = true, default-features = false, features = ["tls-aws-lc"] }
