[package]
name = "lingxia-lxapp"
version.workspace = true
edition.workspace = true
description = "LxApp (lightweight application) container and runtime for LingXia framework"
license = "MIT"
repository.workspace = true
keywords = ["lingxia", "lxapp", "lightweight-app", "webview"]
categories = ["web-programming", "api-bindings"]

[features]
default = ["standard"]
standard = ["js-appservice"]
js-appservice = [
    "dep:rong",
    "dep:rong_modules",
    "dep:rong_http",
    "dep:rong_console",
    "dep:rong_event",
]

[dependencies]
# Use workspace dependencies
http = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
bytes = "1.11"
http-body-util = "0.1"
redb = "3.1.0"
tar = "0.4.44"
zstd = "0.13.3"
ring = "0.17.14"
filetime = "0.2"
uuid = { version = "1.20", features = ["v4"] }

# Local dependencies
rong_modules = { workspace = true, default-features = false, features = ["timer", "cron", "http", "encoding", "event", "exception", "abort", "console", "url", "buffer", "stream", "storage"], optional = true }
rong_rt = { workspace = true, default-features = false }
rong_http = { workspace = true, default-features = false, optional = true }
rong_console = { workspace = true, optional = true }
rong_event = { workspace = true, optional = true }
lingxia-app-context = { workspace = true }
lingxia-log = { workspace = true }
lingxia-provider = { workspace = true }
lingxia-settings = { workspace = true }
lingxia-service = { workspace = true }
lingxia-platform = { workspace = true }
lingxia-update = { workspace = true }
lingxia-transfer = { workspace = true }
lingxia-media = { workspace = true }
lingxia-webview = { workspace = true }
lingxia-messaging = { workspace = true }

# Target-specific JavaScript engine selection
# Apple platforms use JavaScriptCore.
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
rong = { workspace = true, features = ["jscore"], optional = true }
rong_modules = { workspace = true, default-features = false, features = ["jscore"], optional = true }

# Android currently uses QuickJS.
[target.'cfg(target_os = "android")'.dependencies]
rong = { workspace = true, features = ["quickjs"], optional = true }
rong_modules = { workspace = true, default-features = false, features = ["quickjs"], optional = true }

# HarmonyOS uses ArkJS.
[target.'cfg(all(target_os = "linux", target_env = "ohos"))'.dependencies]
rong = { workspace = true, features = ["arkjs"], optional = true }
rong_modules = { workspace = true, default-features = false, features = ["arkjs"], optional = true }

# Fallback for other targets.
[target.'cfg(not(any(target_os = "ios", target_os = "macos", target_os = "android", all(target_os = "linux", target_env = "ohos"))))'.dependencies]
rong = { workspace = true, features = ["quickjs"], optional = true }
rong_modules = { workspace = true, default-features = false, features = ["quickjs"], optional = true }

[target.'cfg(any(target_os = "android", target_os = "ios", all(target_os = "linux", target_env = "ohos")))'.dependencies]
rong_modules = { workspace = true, default-features = false, features = ["tls-ring"], optional = true }
rong_http = { workspace = true, default-features = false, features = ["tls-ring"], optional = true }
rong_rt = { workspace = true, default-features = false, features = ["tls-ring"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios", all(target_os = "linux", target_env = "ohos"))))'.dependencies]
rong_modules = { workspace = true, default-features = false, features = ["tls-aws-lc"], optional = true }
rong_http = { workspace = true, default-features = false, features = ["tls-aws-lc"], optional = true }
rong_rt = { workspace = true, default-features = false, features = ["tls-aws-lc"] }

[dev-dependencies]
tempfile = "3"
