[package]
name = "lingxia-media"
version.workspace = true
edition.workspace = true
description = "Shared media streaming abstractions for LingXia"
license = "MIT"
readme = "README.md"
repository.workspace = true

[dependencies]
lingxia-platform = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
