[package]
name = "lingxia-messaging"
version.workspace = true
edition.workspace = true
description = "Messaging infrastructure for LingXia framework"
license = "MIT"
repository.workspace = true
keywords = ["lingxia", "messaging", "lxapp"]
categories = ["api-bindings"]

[dependencies]
tokio = { workspace = true }
