[package]
name = "lingxia-native-macros"
version.workspace = true
edition.workspace = true
description = "Procedural macros for LingXia native APIs"
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
