[package]
name = "lingxia-platform"
version.workspace = true
edition.workspace = true
description = "Platform abstraction layer for LingXia framework (Android, iOS, HarmonyOS)"
license = "MIT"
repository.workspace = true
keywords = ["lingxia", "platform", "lxapp", "cross-platform"]
categories = ["api-bindings"]

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
lingxia-messaging = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
rong_rt = { workspace = true, default-features = false }
async-trait = "0.1"

# Desktop-specific dependencies (macOS, Windows)
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
imagesize = "0.14"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
rxing = "0.8.3"
rfd = { version = "0.17.2", default-features = false }
serde_json = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
lingxia-webview = { workspace = true }
windows = { workspace = true, features = [
    "Devices_Geolocation",
    "Foundation",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_Security_Credentials",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }

# Android-specific dependencies (only what's needed for FFI)
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.1"
android_logger = "0.15.0"
serde_json = { workspace = true }
ndk-sys = "0.6.0"
base64 = { workspace = true }

# Apple-specific dependencies (iOS and macOS)
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-foundation = "0.3"
objc2-core-location = "0.3"
dispatch2 = "0.3"
swift-bridge = "0.1.59"
log = { workspace = true }
oslog = "0.2.0"
serde_json = { workspace = true }
base64 = { workspace = true }
percent-encoding = "2.3"
security-framework = "3.7.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSEvent", "NSGraphicsContext", "NSView", "NSWindow", "objc2-core-graphics"] }
objc2-core-graphics = { version = "0.3", default-features = false, features = ["CGBase", "CGDirectDisplay", "CGEvent", "CGEventTypes", "CGGeometry", "objc2"] }

[target.'cfg(target_os = "ios")'.dependencies]
objc2-photos = "0.3"
block2 = "0.6"

# HarmonyOS-specific dependencies
[target.'cfg(target_env = "ohos")'.dependencies]
ohos_hilog = "0.1.3"
napi-ohos = "1.1.6"
napi-derive-ohos = "1.1.6"
ohos-raw-sys = "0.1.0"
serde_json = { workspace = true }
base64 = { workspace = true }
lingxia-webview = { workspace = true }
libc = "0.2"
image = { version = "0.25.10", default-features = false, features = ["jpeg"] }

[build-dependencies]
swift-bridge-build = "0.1.59"
napi-build-ohos = "1.1.6"
