[package]
name = "lingxia-settings"
version.workspace = true
edition.workspace = true
description = "Shared settings/preferences store for LingXia"
license = "MIT"
readme = "README.md"
repository.workspace = true

[dependencies]
lingxia-app-context = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
