[package]
name = "lingxia-shell"
version.workspace = true
edition.workspace = true
description = "Shell product module and host registrations for LingXia"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/LingXia-Dev/LingXia"
documentation = "https://docs.rs/lingxia-shell"
repository = "https://github.com/LingXia-Dev/LingXia"
keywords = ["lingxia", "shell", "lxapp", "webview"]
categories = ["web-programming", "api-bindings"]

[dependencies]
lxapp = { workspace = true }
lingxia-app-context = { workspace = true }
lingxia-browser = { workspace = true }
lingxia-service = { workspace = true }
lingxia-webview = { workspace = true }
lingxia-native-macros = { workspace = true }
lingxia-platform = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rong = { workspace = true, default-features = false }

[target.'cfg(not(target_os = "android"))'.dependencies]
lingxia-proxy = { workspace = true, features = ["rule-list-routing"] }
