[package]
name = "lingxia-shell"
version.workspace = true
edition.workspace = true
description = "Shell product module and host registrations for LingXia"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/LingXia-Dev/LingXia"
documentation = "https://docs.rs/lingxia-shell"
repository.workspace = true
keywords = ["lingxia", "shell", "lxapp", "webview"]
categories = ["web-programming", "api-bindings"]

[dependencies]
lxapp = { workspace = true, default-features = false }
lingxia-app-context = { workspace = true }
lingxia-browser = { workspace = true }
lingxia-service = { workspace = true }
lingxia-terminal = { workspace = true }
lingxia-webview = { workspace = true, features = ["windows-host"] }
lingxia-native-macros = { workspace = true }
lingxia-platform = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rong = { workspace = true, default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
lingxia-proxy = { workspace = true, features = ["rule-list-routing"] }

[target.'cfg(target_os = "windows")'.dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
